--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.7.5"
+    "@astrojs/mdx": "^4.2.5",
+    "@tailwindcss/vite": "^4.1.5",
+    "astro": "^5.7.5",
+    "daisyui": "^5.0.35",
+    "tailwindcss": "^4.1.5"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16"
   }
 }
