--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
       - name: Checkout your repository using git
         uses: actions/checkout@v4
+      - name: Install Playwright for Diagram Rendering
+        run: npx playwright install --with-deps chromium 
       - name: Install, build, and upload your site
         uses: withastro/action@v3
         with:
