--- a/package.json
+++ b/package.json
@@ -1,21 +1,20 @@
 {
-  "name": "",
+  "name": "astro-template",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "dev": "astro dev",
+    "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/mdx": "^4.2.5",
-    "@tailwindcss/vite": "^4.1.5",
-    "astro": "^5.7.5",
-    "daisyui": "^5.0.35",
-    "tailwindcss": "^4.1.5"
+    "@astrojs/mdx": "^4.3.0",
+    "astro": "^5.8.0",
+    "playwright": "^1.52.0",
+    "rehype-mermaid": "^3.0.0"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.16"
+    "postcss-nesting": "^13.0.1"
   }
 }
