--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "astro-template",
+  "name": "site",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -9,12 +9,6 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/mdx": "^4.3.0",
-    "astro": "^5.8.0",
-    "playwright": "^1.52.0",
-    "rehype-mermaid": "^3.0.0"
-  },
-  "devDependencies": {
-    "postcss-nesting": "^13.0.1"
+    "astro": "^5.9.1"
   }
 }
